--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
       Learn Enough to be Dangerous is an outgrowth of the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and the <a href="http://www.softcover.io/">Softcover publishing platform</a>. This page is part of the sample site for <a href="http://learnenough.com/html-tutorial"><em>Learn Enough HTML to be Dangerous</em></a>, which teaches the basics of <strong>H</strong>yper<strong>T</strong>ext<strong>M</strong>arkup<strong>L</strong>anguage, the universal language of the World Wide Web. Other related tutorials can be found at <a href="http://learnenough.com/">learnenough.com</a>.
     </p>
 
+    <p>
+      HTML was created by the original "web developer", computer scientist <a href="https://en.wikipedia.org/wiki/Tim_Berners_Lee">Tim Berners-Lee</a>. It's not true that Sir Tim invented HTML in order to share pictures of his cat, but it would be cool if it were.
+    </p>
+
+    <img src="images/kitten.jpg" alt="An adorable kitten">
+
     <h2>Founders</h2>
 
     <p>
@@ -25,6 +31,8 @@
     </p>
 
     <h3>Michael Hartl</h3>
+
+    <img src="https://gravatar.com/avatar/ffda7d145b83c4b118f982401f962ca6?s=150" alt="Michael Hartl">
 
     <p>
       Michael is the creator of the <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a> and principal author of the <a href="http://learnenough.com/">Learn Enough to be Dangerous</a> introductory sequence. He is an advanced student of <a href="http://kravmaga.com/">Krav Maga</a> and has a three-step plan for world domination. Rumours that he's secretly a supervillain are slightly exaggerated.
@@ -36,15 +44,20 @@
 
     <h3>Lee Donahoe</h3>
 
+    <img src="https://gravatar.com/avatar/b65522a6f3a6899705d119d7aa232a6d?s=150" alt="Lee Donahoe">
+
     <p>
       When he's not literally swimming with sharks or hunting powder stashes on his snowboard, you can find Lee in front of his computer designing interfaces, doing front-end development, or writing some of the interface-related Learn Enough tutorials.
     </p>
 
     <p>
-      YOu should follow Lee on Twitter <a href="https://twitter.com/leedonahoe">here</a>.
+      You should follow Lee on Twitter <a href="https://twitter.com/leedonahoe">here</a>.
     </p>
 
     <h3>Nick Merwin</h3>
+
+    <img src="https://gravatar.com/avatar/e2d6ce2ba5c1b6d674ae8ff2b3b45d23?s=150"
+alt="Nick Merwin">
 
     <p>
       You may have seen him shredding guitar live with Capital Cities on Jimmy Kimmel, Conan, or The Ellen Show, but rest assured Nick is a true nerd at heart. He's just as happy shredding well-spec'd lines of code from a tour bus as he is from his kitchen table.
