update index and moby dick pages

--- a/index.html
+++ b/index.html
@@ -40,6 +40,21 @@
       <img src="images/kitten.jpg" alt="An adorable kitten">
     </a>
 
+    <h2>Quotations</h2>
+
+    <p>
+      IN addition to hosting most of the world's supply of kitten videos, the Web is also full of inspiring quotes, perhaps none more so than this one:
+    </p>
+    <p>
+      <blockquote style="padding: 2px 20px; background: #fafafa;">
+        <p>
+          <em>DOn't believe every quote you read on the internet.</em>
+          <br>
+          --Abraham Lincoln
+        </p>
+      </blockquote>
+    </p>
+
     <h2>Founders</h2>
 
     <p>
