--- a/moby_dick.html
+++ b/moby_dick.html
@@ -8,33 +8,28 @@
 
     <div>
       <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
       <a href="tags.html">HTML Tags</a>
+      <a href="moby_dick.html">Moby Dick</a>
     </div>
 
-    <!-- much here to be styled, will do so in last section -->
-    
-    <header>
+    <header style="text-align: center; margin: 0 0 80px;">
       <h1>A Softcover Book Report</h1>
       <h2>Moby-Dick (or, The Whale)</h2>
     </header>
 
-    <div>
+    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
       <p>
         The <a href="http://www.softcover.io/">Softcover</a> publishing platform was designed mainly for ebooks like the <a href="http://railstutorial.org/book"><em>Ruby on Rails Tutorial</em></a> book and <a href="http://learnenough.com/html"><em>Learn Enough HTML to be Dangerous</em></a>, but it's also good for making more traditional books, such as the novel <em>Moby-Dick</em> by Herman Melville (sometimes written as <em>Moby Dick</em>). We present below a short and affectionately irreverent book report on this classic of American literature.
       </p>
-    </div>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg" alt="A pod of Sperm Whales">
+      <img src="images/sperm_whales.jpg" alt="A pod of Sperm Whales" style="display: block; margin: 0 auto; width: 500px">
     </a>
-
-    <div>
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
       <a href="https://www.softcover.io/read/6070fb03/moby-dick" target="_blank">
-        <img src="images/moby_dick.png" alt="Moby Dick">
+        <img src="images/moby_dick.png" alt="Moby Dick" height="200px" style="float: left; margin: 0 40px 0 0;">
       </a>
 
       <p>
@@ -42,9 +37,9 @@
           <em>Moby-Dick</em></a> by Herman Melville begins with these immortal words:
       </p>
 
-      <blockquote>
+      <blockquote style="font-style: italic; font-size: 20px;">
         <p>
-          <span>Call me Ishmael.</span> Some years ago-never mind how long precisely-having little or no money in my purse, and nothing particular to interest me on short, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation.
+          <span style="font-style: normal; font-size: 24px; font-weight: bold; color: #ff0000;">Call me Ishmael.</span> Some years ago-never mind how long precisely-having little or no money in my purse, and nothing particular to interest me on short, I thought I would sail about a little and see the watery part of the world. It is a way I have of driving off the spleen and regulating the circulation.
         </p>
       </blockquote>
 
