completed the book

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   </head>
   <body>
 
-    <div>
+    <div style="text-align: right;">
       <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html" style="margin: 0 0 0 10px">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
     <h1>The Learn Enough Story</h1>
@@ -46,9 +46,9 @@
       IN addition to hosting most of the world's supply of kitten videos, the Web is also full of inspiring quotes, perhaps none more so than this one:
     </p>
     <p>
-      <blockquote style="padding: 2px 20px; background: #fafafa;">
+      <blockquote style="padding: 2px 20px; background: #f1ebda;">
         <p>
-          <em>DOn't believe every quote you read on the internet.</em>
+          <em>Don't believe every quote you read on the internet.</em>
           <br>
           --Abraham Lincoln
         </p>
