--- a/moby_dick.html
+++ b/moby_dick.html
@@ -6,25 +6,26 @@
   </head>
   <body>
 
-    <div>
+    <div style="text-align: right;">
       <a href="index.html">Home</a>
-      <a href="tags.html">HTML Tags</a>
-      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html" style="margin: 0 0 0 10px">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
     </div>
 
-    <header style="text-align: center; margin: 0 0 80px;">
+    <header style="text-align: center; margin: 0 0 40px;">
       <h1>A Softcover Book Report</h1>
       <h2>Moby-Dick (or, The Whale)</h2>
     </header>
 
-    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
       <p>
         The <a href="http://www.softcover.io/">Softcover</a> publishing platform was designed mainly for ebooks like the <a href="http://railstutorial.org/book"><em>Ruby on Rails Tutorial</em></a> book and <a href="http://learnenough.com/html"><em>Learn Enough HTML to be Dangerous</em></a>, but it's also good for making more traditional books, such as the novel <em>Moby-Dick</em> by Herman Melville (sometimes written as <em>Moby Dick</em>). We present below a short and affectionately irreverent book report on this classic of American literature.
       </p>
 
     <a href="https://commons.wikimedia.org/wiki/File:Sperm_whale_pod.jpg">
-      <img src="images/sperm_whales.jpg" alt="A pod of Sperm Whales" style="display: block; margin: 0 auto; width: 500px">
+      <img src="images/sperm_whales.jpg" alt="A pod of Sperm Whales" style="display: block; margin: 0 auto;">
     </a>
+
+    <div style="width: 500px; margin: 20px auto; padding: 30px; background-color: #fafafa;">
 
       <h3>Moby-Dick: A classic tale of the sea</h3>
 
