--- a/tags.html
+++ b/tags.html
@@ -6,6 +6,12 @@
   </head>
   <body>
 
+    <div style="text-align: right;">
+      <a href="index.html">Home</a>
+      <a href="tags.html" style="margin: 0 0 0 10px">HTML Tags</a>
+      <a href="moby_dick.html" style="margin: 0 0 0 10px;">Moby Dick</a>
+    </div>
+
     <header>
       <h1>Important HTML tags</h1>
     </header>
